<resources>
    <string name="app_name">Travelogue</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="tab_text_3">Tab 3</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_tab_fragment1">TabFragment1</string>
    <string name="Forgot_password"><u>Forgot password?</u></string>
    <string name="signup">Sign up</string>
    <string name="signup_welcome">Begin your journey!</string>
    <string name="signup_redirect"><u>Dont have an account? <b>Sign up here!</b></u></string>
    <string name="login">Login</string>
    <string name="login_redirect">Already have an account? Login here!</string>
    <string name="hint_password">Password</string>
    <string name="hint_email">Email address</string>
    <string name="hint_name">Full name</string>
    <string name="hint_login">Email or username</string>
    <string name="hint_username">Username</string>
    <string name="signup_email">Signup via email</string>
    <string name="signup_facebook">Signup via Facebook</string>
    <string name="welcome">Travelogue welcomes you!</string>
    <string name="edit_cover">Edit cover</string>
    <string name="default_description">Tell the world a little about you</string>
    <string name="default_user">Default User</string>
    <string name="default_email">testUser@gmail.com</string>
    <string name="default_password">password</string>
    <string name="show_password">Show password</string>
    <string name="show_notifications">Notifications</string>
    <string name="save_changes">Save changes</string>
    <string name="default_posts">0 posts</string>
    <string name="default_followers">0 followers</string>
    <string name="default_following">0 following</string>
    <string name="edit_profile">Edit profile</string>
    <string name="create_trip">Create trip</string>
    <string name="logout">Logout</string>
    <string name="create_event">Create event</string>
    <string name="create_post">Create post</string>
    <string name="show_location">Location</string>
    <string name="setPicture"> Set your display picture</string>
    <string name="personalize">Let\'s personalize your profile!</string>
    <string name="not_now">Later</string>
    <string name="choose">Choose picture</string>
    <string name="done">Done</string>
    <string name="createPost">Create a new post</string>
    <string name="uploadStatus">Write a few words about your day</string>
    <string name="edit">Change profile picture</string>
    <string name="day">Day: </string>
    <string name="month">Month: </string>
    <string name="year">Year: </string>
    <string name="date_picker">date picker</string>
    <string name="error_msg_trip_name">PLease enter trip name to create new post</string>
    <string name="error_msg_trip_start_location">PLease enter trip start location to create new post"</string>
    <string name="error_msg_trip_end_location">PLease enter trip end location to create new post"</string>
    <string name="error_msg_trip_start_date">PLease enter trip start date to create new post"</string>
    <string name="upload_done">upload done</string>
    <string name="error_msg_event_name">PLease enter event title to create new post</string>
    <string name="error_msg_event_location">PLease enter event location to create new post</string>
    <string name="error_msg_event_start_date">PLease enter event start date to create new post</string>
    <string name="hour">HH: </string>
    <string name="minute">MM: </string>
    <string name="createNewEvent">Create a new event</string>
    <string name="eventLocation">Event location</string>
    <string name="your_event_location">Your event location</string>
    <string name="place">Place</string>
    <string name="startDate">Start Date</string>
    <string name="eventname">Event name</string>
    <string name="eventStartDate">Event start date</string>
    <string name="eventStartTime">Event Start Time</string>
    <string name="eventDescription">Event description here</string>
    <string name="uploadImage">Upload Image</string>
    <string name="startTime">Start Time</string>
    <string name="endDate">End Date</string>
    <string name="endTime">End Time</string>
    <string name="eventendDate">Event end date</string>
    <string name="eventendTime">Event end time</string>
    <string name="tripend">Trip end</string>
    <string name="createNewTrip">Create a new trip</string>
    <string name="tripName">Trip name</string>
    <string name="tripStart">Trip Start</string>
    <string name="tripstartLocation">Start Location</string>
    <string name="endlocation">End location</string>
    <string name="tripDescription">Add trip description</string>
    <string name="addPhotos">Add photos</string>
    <string name="facebook_app_id">209018609986498</string>
    <string name="fb_login_protocol_scheme">fb209018609986498</string>
</resources>
