<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:background="@color/white">

    <include
        android:id="@+id/app_bar"
        layout="@layout/app_bar">

    </include>



    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:background="@drawable/teal">

        <LinearLayout
            android:id="@+id/layout"
            android:layout_width="match_parent"
            android:layout_height="290dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:orientation="vertical">

            <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
                android:id="@+id/profile_image"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="20dp"
                android:layout_marginTop="45dp"
                android:src="@drawable/harry"
                app:civ_border_color="@color/white"
                app:civ_border_width="2dp" />

            <TextView
                android:id="@+id/nameTV"
                android:layout_width="267dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="1dp"
                android:background="@color/PrimaryColorDark"
                android:text="@string/default_user"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="24sp" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="3dp"
                android:background="@android:color/transparent" />

            <TextView
                android:id="@+id/descTV"
                android:layout_width="275dp"
                android:layout_height="35dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="1dp"
                android:background="@color/PrimaryColorDark"
                android:text="@string/default_description"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textStyle="normal" />


        </LinearLayout>


    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:background="@color/ice_blue">

        <Button
            android:id="@+id/viewPostsButton"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/textview_border"
            android:text="@string/default_posts"
            android:textAllCaps="false"
            android:textSize="20sp" />

        <Button
            android:id="@+id/viewFollowersButton"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/textview_border"
            android:text="@string/default_followers"
            android:onClick="followers"
            android:textAllCaps="false"
            android:textSize="20sp" />

        <Button
            android:id="@+id/viewFollowingButton"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/textview_border"
            android:text="@string/default_following"
            android:onClick="followers"
            android:textAllCaps="false"
            android:textSize="20sp" />

    </LinearLayout>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#F2F3F4">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#F2F3F4"
        android:isScrollContainer="true">

        <Button
            android:id="@+id/editProfileButton"
            android:layout_width="323dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/roundedbutton"
            android:onClick="editProfile"
            android:textColor="@color/MintCream"
            android:text="@string/edit_profile"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.511"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/createPostButton"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/roundedbutton"
            android:onClick="createPost"
            android:text="@string/create_post"
            android:textColor="@color/MintCream"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editProfileButton" />


        <Button
            android:id="@+id/createTripButton"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/roundedbutton"
            android:onClick="createTrip"
            android:text="@string/create_trip"
            android:textColor="@color/MintCream"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/createPostButton" />

        <Button
            android:id="@+id/LogoutButton"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="72dp"
            android:background="@drawable/roundedbutton"
            android:onClick="logout"
            android:text="@string/logout"
            android:textColor="@color/MintCream"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.493"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/createTripButton" />

        <Button
            android:id="@+id/CreateEventButton"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="4dp"
            android:background="@drawable/roundedbutton"
            android:onClick="createEvent"
            android:text="@string/create_event"
            android:textColor="@color/MintCream"
            app:layout_constraintBottom_toTopOf="@+id/LogoutButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.533"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/createTripButton"
            app:layout_constraintVertical_bias="0.238" />
    </android.support.constraint.ConstraintLayout>
    </ScrollView>


</LinearLayout>