<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/LightGrey">

    <TextView
        android:id="@+id/textView4"
        android:layout_width="258dp"
        android:layout_height="41dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:fontFamily="serif"
        android:text="@string/createPost"
        android:textAlignment="center"
        android:textColor="@color/Black"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/status"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.583" />



    <Button
        android:id="@+id/createPost"
        android:layout_width="206dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/roundedbutton"
        android:text="@string/create_post"
        android:textColor="@color/MintCream"
        android:onClick="OncreatePost"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/status"
        app:layout_constraintVertical_bias="0.168" />

    <Button
        android:id="@+id/createTrip"
        android:layout_width="205dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="28dp"
        android:background="@drawable/roundedbutton"
        android:onClick="onCreateTrip"
        android:text="@string/create_trip"
        android:textColor="@color/MintCream"
        app:layout_constraintEnd_toEndOf="@+id/createPost"
        app:layout_constraintStart_toStartOf="@+id/createPost"
        app:layout_constraintTop_toBottomOf="@+id/createPost" />
    <include
        android:id="@+id/app_bar"
        layout="@layout/app_bar">

    </include>


    <Button
        android:id="@+id/createEvent"
        android:layout_width="212dp"
        android:layout_height="49dp"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/roundedbutton"
        android:onClick="onCreateEvent"
        android:text="@string/create_event"
        android:textColor="@color/MintCream"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/createTrip"
        app:layout_constraintStart_toStartOf="@+id/createTrip"
        app:layout_constraintTop_toBottomOf="@+id/createTrip"
        app:layout_constraintVertical_bias="0.349" />

    <EditText
        android:id="@+id/status"
        android:layout_width="290dp"
        android:layout_height="143dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="100dp"
        android:background="@color/LightGrey"
        android:ems="10"
        android:fontFamily="serif"
        android:hint="@string/uploadStatus"
        android:inputType="text"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/addPhoto"
        android:layout_width="98dp"
        android:layout_height="35dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/roundedbutton"
        android:text="@string/uploadImage"
        android:textColor="@color/MintCream"
        android:textSize="10sp"
        app:layout_constraintBottom_toTopOf="@+id/createPost"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.828"
        app:layout_constraintStart_toStartOf="@+id/createPost"
        app:layout_constraintTop_toBottomOf="@+id/status" />
</android.support.constraint.ConstraintLayout>